[package]
name = "image_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.1", features = ["json", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
sha2 = "0.10"
mime_guess = "2.0"
http = "1.2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
axum-test ={ version = "*"}
reqwest = "0.12.12"